<resources>
    <string name="app_name">Android-Multi-Game</string>
    <string name="splashScreentext">Android-Multi-Game</string>

    <string name="createPlayerWelcome">Bienvenue !</string>
    <string name="create_player_localisation">localisation</string>
    <string name="create_player_name">name</string>
    <string name="create_player_firstname">firstname</string>
    <string name="create_player_age">age</string>
    <string name="create_player_btn_players">Players</string>
    <string name="create_player_btn_validate">validate</string>

    <string name="show_player_name">Thubé</string>
    <string name="show_player_firstname">Florian</string>
    <string name="show_player_score">0</string>

    <string name="view_all_players">Liste des joueurs</string>

    <string name="fragment_dragndrop">Drag and Drop !</string>
    <string name="fragment_fasttap_game_txt">Fast Tap !</string>
    <string name="fragment_ipacgame">Ipac Game !</string>
    <string name="fragment_swipe">Swipe !</string>
    <string name="fragment_settings">Settings</string>

    <string name="fragment_fasttap_score">Score : 0</string>
    <string name="fragment_fasttap_time">Temps restant : 30s</string>
    <string name="fragment_fasttap_tap">%Tap$d</string>
    <string name="fragment_fasttap_start">Commencer</string>
    <string name="endgame_score">Votre score est de 0</string>
    <string name="endgame_menu">Menu</string>
    <string name="endgame_leave">Quitter</string>

    <string name="number_try">Il reste %d essais !</string>
    <string name="number_type">Rentrez un nombre</string>
    <string name="number_info_text_plus">C\'est plus</string>
    <string name="number_info_text_less">C\'est moins</string>
    <string name="base_info_text">Entrer un nombre !</string>
    <string name="textFinalResultWin">Bravo !</string>
    <string name="textFinalResultLose">Perdu !</string>
    <string name="validate">valider</string>
    <string name="relancer">Relancer</string>
    <string name="quitter">Quitter</string>
    <string name="splashscreentxt">Chargement...</string>

    <string name="settings_title">Paramètres</string>
    <string name="settings_score">0</string>
    <string name="settings_game_name">Name of game</string>

    <string name="profil_title">Profil</string>
    <string name="profil_name">Thubé</string>
    <string name="profil_firstname">florian</string>
    <string name="profil_age">20</string>
    <string name="profil_localisation">Annecy</string>
    <string name="profil_update">Mettre à jour</string>
    <string name="profil_delete">Supprimer le joueur</string>
    <string name="profil_ipac_score">Ipac Game : 0</string>
    <string name="profil_drag_score">DragNDrop Game : 0</string>
    <string name="profil_fasttap_score">Fasttap Game : 0</string>
    <string name="profil_swipe_score">Swipe Game : 0</string>
</resources>
