<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowDataPlayerActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/profil_title"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:context=".ShowDataPlayerActivity">

        <ImageView
            android:id="@+id/profil_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/placeholder"
            android:layout_marginRight="50sp"/>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            tools:context=".ShowDataPlayerActivity">

            <TextView
                android:id="@+id/profil_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_name"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/profil_firstname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profil_firstname"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        />

    <TextView
        android:id="@+id/profil_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_age"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        />

    <TextView
        android:id="@+id/profil_localisation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_localisation"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        />

    <TextView
        android:id="@+id/profil_swipe_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_swipe_score"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profil_drag_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_drag_score"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profil_fasttap_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_fasttap_score"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profil_ipac_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_ipac_score"
        android:textSize="25sp"
        android:layout_marginStart="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        />

    <Button
        android:id="@+id/profil_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/profil_update"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <Button
        android:id="@+id/profil_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/profil_delete"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

</LinearLayout>