<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/show_score"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal"
    tools:context=".ShowScoreRow">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/show_player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/show_player_firstname"
        android:inputType="text"
        tools:ignore="TextViewEdits" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        />

    <TextView
        android:id="@+id/settings_game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/settings_game_name"
        android:inputType="text"
        tools:ignore="TextViewEdits" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <ImageView
        android:id="@+id/show_player_image"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/placeholder" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/settings_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/settings_score"
        android:inputType="text"
        tools:ignore="TextViewEdits" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
</LinearLayout>
